work on betting

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>BetTBA</title>
+		<title>FIRST Picks</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../css/index.css">
 		<script src="../javascript/index.js"></script>
@@ -106,7 +106,18 @@
 				</div> -->
 			</div>
 			<div class="sidebar">
-				SideBar
+				<div class="bet-panel">
+					<h3 class="bet-match-title" id="bet-panel-title">Match 3</h3>
+					<h4 class="bet-type-title" id="bet-panel-type">Moneyline - Red Alliance</h4>
+				
+					<label for="bet-amount">Bet Amount:</label>
+					<input id="bet-amount" placeholder="Enter amount">
+				
+					<div class="bet-actions">
+						<button class="bet-button bet-action-button" onclick="placeBet()">Place Bet</button>
+						<button class="bet-button bet-action-button">Parlay Bet</button>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
